--- a/index.html
+++ b/index.html
@@ -1,1 +1,7 @@
-<button a="portfolio/indes.html">Portfolio</button>
+<link href="portfolio/CSS/global.css" type="stylesheet">     
+
+
+
+<div class="button">
+        <a href="portfolio/index.html">Portfolio</a>
+      </div>
