--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
-<link href="portfolio/CSS/global.css" type="stylesheet">     
+<link href="portfolio/CSS/global.css" rel="stylesheet">     
 
 
-
+  <div class="sticky">
+    <div class="navbar">
 <div class="button">
         <a href="portfolio/index.html">Portfolio</a>
       </div>
+          </div></div>
