--- a/portfolio/Index.html
+++ b/portfolio/Index.html
@@ -48,6 +48,9 @@
       <div class="button">
         Experiences
       </div>
+	<div class="button">
+	<a href="../Index.html>Landing Page>
+		 </div>
     </div>
     </div>
   </div>
