--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
   <div class="sticky">
     <div class="navbar">
 <div class="button">
-        <a href="portfolio/Index.html">Portfolio</a>
+        <a href="portfolio/index.html">Portfolio</a>
       </div>
           </div></div>
