--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -49,7 +49,7 @@
         Experiences
       </div>
 	<div class="button">
-	<a href="../Index.html>Landing Page>
+	<a href="../index.html>Landing Page</a>
 		 </div>
     </div>
     </div>
