--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -47,7 +47,7 @@
       </div>
       <div class="button">
         Experiences
-      </div>
+	    </div></div>
 	<div class="button">
 	<a href="../index.html">Landing Page</a>
 		 </div>
