--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
-<link href="portfolio/CSS/global.css" rel="stylesheet">     
-
-
+<head><link href="portfolio/CSS/global.css" rel="stylesheet">     
+</head>
+<body>
   <div class="sticky">
     <div class="navbar">
 <div class="button">
         <a href="portfolio/index.html">Portfolio</a>
       </div>
           </div></div>
+</body>
