--- a/portfolio/resume.html
+++ b/portfolio/resume.html
@@ -55,7 +55,7 @@
     <h1>Page Title</h1>
     <div class="section">
       <h2>Section Title</h2>
-<iframe src="documents/Wsmith_resume.pdf" width="100%" height="1150" style="border:none;"></iframe>
+<iframe src="documents/Wsmith_Resume.pdf" width="100%" height="1150" style="border:none;"></iframe>
     </div>
 	<br /><img class="logo" src="Stats project/SVG/Asset-2.svg" height="50px"><h5>pog</h5>
   </div>
