--- a/portfolio/wsmith12thgrade.html
+++ b/portfolio/wsmith12thgrade.html
@@ -62,7 +62,7 @@
 	<h2>Artifact 1 - Robotics<h2>
 	<a href="Robotics.html"><img class="img-L"height="300px" src="images/Robotics.jpg"></a><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
 	<h2>Artifact 2 - Game Design</h2>
-	<a href="GameDesign.html"><img height="300px" src="images/New-Ship.PNG"></a><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br/><br/><br/>
+	<a href="GameDesign.html"><img height="300px" src="images/NewShip.PNG"></a><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br/><br/><br/>
 	<h2>Artifact 3 - Stats Project</h2><a class="img-L"href="Stats project/OPEN ME.html"><img height="300px" src="images/stats project.PNG"></a></a><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br/><br/><br/>
 	<h2>Artifact 4 - Portfolio</h2><a href="index.html"> <img height="300px" src="images/12.PNG"></a><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br/><br/><br/>
 	<h2>Artifact 5 - Rubber Band Sector Artillery</h2><a href="wsmith11thgrade.html"><img height="300px" src="images/slingshot.png"></a><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br/><br/><br/><br /><br /><br /><br/><br/><br/><br />
