--- a/portfolio/Internships.html
+++ b/portfolio/Internships.html
@@ -24,12 +24,12 @@
     <div class="dropdown">
       <!-- content goes before the button. weird, I know. -->
       <div class="dropdown-content">
-        <div class="button"><a href="wsmith7grade.html">7th Grade</a></div>
-        <div class="button"><a href="wsmith8grade.html">8th Grade</a></div>
-        <div class="button"><a href="wsmith9grade.html">9th Grade</a></div>
-        <div class="button"><a href="wsmith10grade.html">10th Grade</a></div>
-        <div class="button"><a href="wsmith11grade.html">11th Grade</a></div>
-		<div class="button"><a href="wsmith12grade.html">12th Grade</a></div>
+        <div class="button"><a href="wsmith7thgrade.html">7th Grade</a></div>
+        <div class="button"><a href="wsmith8thgrade.html">8th Grade</a></div>
+        <div class="button"><a href="wsmith9thgrade.html">9th Grade</a></div>
+        <div class="button"><a href="wsmith10thgrade.html">10th Grade</a></div>
+        <div class="button"><a href="wsmith11thgrade.html">11th Grade</a></div>
+		<div class="button"><a href="wsmith12thgrade.html">12th Grade</a></div>
       </div>
       <div class="button">
         Projects
