--- a/index.html
+++ b/index.html
@@ -6,5 +6,8 @@
 <div class="button">
         <a href="portfolio/index.html">Portfolio</a>
       </div>
+<div class="button">
+  <a href="Zade/index.html">Z Portfolio</a>
+      </div>
           </div></div>
 </body>
