--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <a href="portfolio/index.html">Portfolio</a>
       </div>
 <div class="button">
-  <a href="Zade/index.html">Z Portfolio</a>
+  <a href="Zade/Index.html">Z Portfolio</a>
       </div>
           </div></div>
 </body>
