--- a/Zade/Index.html
+++ b/Zade/Index.html
@@ -14,7 +14,7 @@
 	<div class="dropdown">
 				  <button class="dropbtn">Home</button>
 				  <div class="dropdown-content">
-					<a href="index.html">Home</a>
+					<a href="Index.html">Home</a>
 				  </div>
 				</div>
 				  
@@ -23,12 +23,12 @@
 				  <div class="dropdown-content">
 					<a href="zshivelyProjects.html">Projects Home</a>
 					<a href="zshively5Qualities.html">5 Qualities</a>
-					<a href="zshively7thGrade.html">7thgrade</a>
-					<a href="zshively8thGrade.html">8thgrade</a>
-					<a href="zshively9thGrade.html">Freshman</a>
-					<a href="zshively10thGrade.html">Sophmore</a>
-					<a href="zshively11thGrade.html">Junior</a>
-					<a href="zshively12thGrade.html">Senior</a>
+					<a href="zshively7thgrade.html">7thgrade</a>
+					<a href="zshively8thgrade.html">8thgrade</a>
+					<a href="zshively9thgrade.html">Freshman</a>
+					<a href="zshively10thgrade.html">Sophmore</a>
+					<a href="zshively11thgrade.html">Junior</a>
+					<a href="zshively12thgrade.html">Senior</a>
 					</div>
 					</div>
 
