--- a/Zade/zshivelyCodingProgression.html
+++ b/Zade/zshivelyCodingProgression.html
@@ -15,7 +15,7 @@
 		<div class="dropdown">
 			<button class="dropbtn">Home</button>
 				  <div class="dropdown-content">
-					<a href="index.html">Home</a>
+					<a href="Index.html">Home</a>
 				  </div>
 				</div>
 				  
@@ -24,12 +24,12 @@
 				  <div class="dropdown-content">
 					<a href="zshivelyProjects.html">Projects Home</a>
 					<a href="zshively5Qualities.html">5 Qualities</a>
-					<a href="zshively7thGrade.html">7thgrade</a>
-					<a href="zshively8thGrade.html">8thgrade</a>
-					<a href="zshively9thGrade.html">Freshman</a>
-					<a href="zshively10thGrade.html">Sophmore</a>
-					<a href="zshively11thGrade.html">Junior</a>
-					<a href="zshively12thGrade.html">Senior</a>
+					<a href="zshively7thgrade.html">7thgrade</a>
+					<a href="zshively8thgrade.html">8thgrade</a>
+					<a href="zshively9thgrade.html">Freshman</a>
+					<a href="zshively10thgrade.html">Sophmore</a>
+					<a href="zshively11thgrade.html">Junior</a>
+					<a href="zshively12thgrade.html">Senior</a>
 					</div>
 					</div>
 
@@ -55,8 +55,8 @@
 			<h1 class="fontcolor">Zoelle Shively</h1>
 																			<h5 class="textRight">Here's 2 screenshotz of my code from my websitelast year. Their in parts</h5>
 						<img class="right" src="Images/ZShivelyCH3.png" alt="picture of old code for my website" width="683" height="384">
-																<img class="right" src="Images/ZShivelyCH4_index_part1.png" alt="picture of code from my website last year" width="683" height="384">
-																	<img class="right" src="Images/ZShivelyCH4_index_part2.png" alt="picture of code from my website last year" width="683" height="384">
+																<img class="right" src="Images/ZShivelyCH4_Index_part1.png" alt="picture of code from my website last year" width="683" height="384">
+																	<img class="right" src="Images/ZShivelyCH4_Index_part2.png" alt="picture of code from my website last year" width="683" height="384">
 						<h2 class="fontcolor">Coding project</h2>
 							<p class="fontcolor">
 								So this is one of the main projects we did. This project made us get out of our zones to make<br />
