--- a/Zade/zshively7thgrade.html
+++ b/Zade/zshively7thgrade.html
@@ -3,7 +3,7 @@
 	<head>
 		
 				<meta charset="utf-8"/>
-					<title>ZShively7thGrade</title>
+					<title>zshively7thgrade</title>
 						<meta name="discription" content=" Portfolio: artifacts and discriptions of how I've grown as a student at DRSS."/>
 								<meta name="keywords" content="growth, portfolio, artifacts, reflection, Zoelle Shively, Zoey Shively, ZShively, DRSS Students"/>
 						<meta name="author" content="Zoelle Shively"/>
@@ -17,7 +17,7 @@
 			<div class="dropdown">
 			<button class="dropbtn">Home</button>
 				  <div class="dropdown-content">
-					<a href="index.html">Home</a>
+					<a href="Index.html">Home</a>
 				  </div>
 				</div>
 				  
@@ -26,12 +26,12 @@
 				  <div class="dropdown-content">
 					<a href="zshivelyProjects.html">Projects Home</a>
 					<a href="zshively5Qualities.html">5 Qualities</a>
-					<a href="zshively7thGrade.html">7thgrade</a>
-					<a href="zshively8thGrade.html">8thgrade</a>
-					<a href="zshively9thGrade.html">Freshman</a>
-					<a href="zshively10thGrade.html">Sophmore</a>
-					<a href="zshively11thGrade.html">Junior</a>
-					<a href="zshively12thGrade.html">Senior</a>
+					<a href="zshively7thgrade.html">7thgrade</a>
+					<a href="zshively8thgrade.html">8thgrade</a>
+					<a href="zshively9thgrade.html">Freshman</a>
+					<a href="zshively10thgrade.html">Sophmore</a>
+					<a href="zshively11thgrade.html">Junior</a>
+					<a href="zshively12thgrade.html">Senior</a>
 					</div>
 					</div>
 
