--- a/Zade/zshively12thgrade.html
+++ b/Zade/zshively12thgrade.html
@@ -67,23 +67,23 @@
 							for myself no matter where I am. <br />
 							</p>
 						<h3 class="fontcolor"> Artifact One</h3>
-						<img src="Images/ZS-Artifact1-10262021.png" alt="A picture of me, in a black shirt with roses on it." width="380" height="480">
-						<a href="Images/ZS-Artifact1-10262021.png">Download the picture</a> 
+						<img src="Images/ZS-Artifact1-10262021.PNG" alt="A picture of me, in a black shirt with roses on it." width="380" height="480">
+						<a href="Images/ZS-Artifact1-10262021.PNG">Download the picture</a> 
 						<p class="fontcolor">I have grown in my confidence as proven by my great strides in my engish writing. Including many project I have done in CCP,<br />
 						college credit plus, English. This is my Memior project, it was about how I came to love photography and my depression. I was given<br />
 						lovely feedback from Ms. Slanker and my peers. I had gotten compliments from her for my way with words and decribing all five senses,<br />
 						which was one of the requirments.<br />
 						</p>
 						<h3 class="fontcolor"> Artifact Two</h3>
-						<img src="Images/ZS-Artifact2-10262021.png" alt="A picture of me, in a black shirt with roses on it." width="380" height="480">
-						<a href="Images/ZS-Artifact2-10262021.png">Download the picture</a> 
+						<img src="Images/ZS-Artifact2-10262021.PNG" alt="A picture of me, in a black shirt with roses on it." width="380" height="480">
+						<a href="Images/ZS-Artifact2-10262021.PNG">Download the picture</a> 
 						<p class="fontcolor"> This portfolio was hard but now I can say I'm more confident in it that I was when I got this school.This was<br />
 						the overwellming project throughout my entire stay at the Dayton Regional S.T.E.M. School. This portfolio is a collection of my years<br />
 						here, and my main projects, I have done in the past. I even got a few courses to help me out in the begining. Those classes being the <br />
 						STEM Foundations classes in grades 6 and 7.</p>
 						<h3 class="fontcolor"> Artifact Three</h3>
-						<img src="Images/ZS-Artifact3-10262021.png" alt="A picture of me, in a black shirt with roses on it." width="380" height="480">
-						<a href="Images/ZS-Artifact3-10262021.png">Download the picture</a>
+						<img src="Images/ZS-Artifact3-10262021.PNG" alt="A picture of me, in a black shirt with roses on it." width="380" height="480">
+						<a href="Images/ZS-Artifact3-10262021.Png">Download the picture</a>
 						<p class="fontcolor">This is one of my projects in architecture. It was a paper sketch of a Pavilion and it was to shelter things, ie people,<br />
 						from the rain while also provide a relaxing place to sit at while outside. It shows my confidence in my creativity. But, it also shows my<br />
 						ability to make something look nice while also being functional and have a purpose. It was a project/ assignment called Built Form and Shadows.<br />
