--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <a href="Zade/Index.html">Z Portfolio</a>
       </div>
       <div class="button">
-        < href="CAP/Index.html">Ambassador Project</a>
+        <a href="CAP/Index.html">Ambassador Project</a>
       </div>
           </div></div>
 </body>
