--- a/CAP/Index.html
+++ b/CAP/Index.html
@@ -17,7 +17,7 @@
 	<div id="Intro"><br/><br/><BR/>
 	<div class="content">
 		<h2>Intro</h2>
-		<img src="ireland.jpg" class="img-A" height="200px"><p>Welcome to the Totally Accurate Guide to Irish 
+		<img src="Ireland.jpg" class="img-A" height="200px"><p>Welcome to the Totally Accurate Guide to Irish 
 		Tourism, or TAGIT. This is a school project, so take everything below with a grain of salt, and please, please, please don’t sue us. Or send us a bomb in the mail (looking at you, New IRA, UDA, UFV, Orange Volunteers, and Red Hand Commandos). Anyhow, this project was done by two students for their Human Geography class. Enough with all the disclaimers, let’s get into the meat and potatoes of the project.<br/><br/><br/><br/><br/></p><p class="hide">.
 		</p>
 	</div></div>
