--- a/portfolio/CER.html
+++ b/portfolio/CER.html
@@ -76,7 +76,11 @@ Overall, I feel this Internship experience has helped me learn more about some o
 		<h4>Day 9</h4><p>Today I was told to swap from Vault of thorns to Redlake fort. This map was much bigger than any of the others so i decided to start at one point and work my way from there. I ended up spending an hour and a half making, checking, resizing, and remaking the fortification. I definitely have my work cut out for me in the next few days trying to get thehuge map finished.
 </p><img src="Internship/Day 9.JPG" class="img"height="200px">
 		<h4>Day 10</h4><p>Today i continued working on redlake fort. I got a decent amount further, however the majority is still yet to be done. I added some extra details around the fortification and started on the next section after the gatehouse. Trying to get the broken, rocky texture just right was rather difficult, and ended up taking me a while.</p><img src="Internship/Day 10.JPG" class="img"height="200px"><h5 class="hide">pp</h5>
-	</div>
+	
+		<h3> Mentor Eval Log</h3>
+		<img src="images/MER.PNG"><br/><br/><br/>
+		<h5>bees knees</h5>
+	  </div>
 	
     <div class="section">
    <h2>Career Exploration Report</h2>
