--- a/portfolio/CER.html
+++ b/portfolio/CER.html
@@ -52,33 +52,106 @@
     </div>
   </div>
   <div class="content">
-    <h1>Page Title</h1>
+    <h1>Internship & Career Exploration Report</h1>
 	<div class="section">
 	<h2>Internship</h2>
+	<p>Every year, Juniors are required to complete The internship assignment. We are required to find a company to intern for, and intern for a total of 72 hours. During this time, we are also required to fill out a daily log for at least 10 days of the internship. At the end of the internship, we had our mentors fill out a Mentor Evaluation log, which told the school how we did. After the internship was done, we had to write a reflection for our internship.<p>
 		<h3> Internship reflection</h3>
 	<p>My Internship was with KnightSmith Games. During my Internship I had a 2 main jobs. My 1st job consisted of compiling digital art packs to be sold on their online store. The 2nd job was more about using the actual toolkit. I designed virtual Tabletop maps based on provided blueprints using the Masters Toolkit software. 
 This Internship was impactful to me as it allowed me to see that Game design is a much vaster field than most people originally think. The People at Arkenforge who made the Masters Toolkit, and my mentor at KnightSmith, both could fall under the role as a game designer, each in their own aspects. It also furthered my commitment to becoming a game designer.<br/><br/>
 Most of the projects I worked on were virtual maps created for a tabletop game called Pathfinder, which was originally designed by Paizo.  These maps were both simple and complex to recreate. When I started on the maps I moved rather slowly as I was still trying to get my bearings for the program. I say “both simple and complex to recreate” because while some of the bigger details like trees and rocks are just clicked right in, there are more details along the ground and in the environment that aren’t premade objects. I ended up having to hand draw a lot of vines and grass patches so that the map would have the right feel to it. After managing to get the environments down correctly, I was then tasked to start making the buildings. Buildings added further complexity by requiring me to have precise measurements in some areas where the artists didn’t follow the grid strictly and did more freestyle. One particular example of this was in the Vault of thorns map, where the artists had designed a staircase that’s railing was almost vine-like in the way it curved. I ended up having to freehand this part, and as I am not a super good artist, ended up remaking it several times. <br/><br/>
 There were also other parts of maps where neither free handing nor a prefab model was an option. The main example of this is in the map The Insane Dwarf, in which there was a rounded tent with some ropes tying it down to the ground. Due to my lack of artistry skills, on top of the fact that none of the tent models matched the one I was looking for, I ended up having to get creative with it. I ended up using some wood as the rope texture as it was thin enough it just came off as a brown texture, and had a hot air balloon as the actual tent. Normally this probably wouldn’t have worked, however It actually matched the original design rather well.<br/><br/>
 The final map I worked on before my Internship ended was the Redlake fort. This map was huge, and was definitely a leap given I had mostly worked with environments beforehand, and I only got partway through another building map. By the end of my Internship I hadn’t even completed the majority of the map, only making through the first few sections. The reason I didn’t get super far with it was mostly down to its complexity. There was a lot of new tricks that I had to learn while making this particular map like double checking the maps description versus its drawing, doing proper sizing on all pieces, getting layering done correctly, and more. Me having a difficult time wasn’t really that bad of a thing, as I ended up asking a lot of questions about how to effectively use the software. One of the hardest parts for this map, like the others, was free-handing parts. There was a section in the map where the terrain around the fort had crumbled down, and I couldn’t really follow the grid that was in place to make it. There was also a lot of rocky cliff around the entire fort that all needed to be freehanded. I do feel by the end of this I definitely improved my ability to freehand some parts of the designs, instead of just using the line tools.<br /><br/>
-Overall, I feel this Internship experience has helped me learn more about some of the lesser known aspects of the game design world, and has helped me with some of the more creative sides of it as well. I still plan on going into the game design field, and I hope the experiences I’ve had with this Internship will help me later in life when pursuing this field
+Overall, I feel this Internship experience has helped me learn more about some of the lesser known aspects of the game design world, and has helped me with some of the more creative sides of it as well. I still plan on going into the game design field, and I hope the experiences I’ve had with this Internship will help me later in life when pursuing this field.
 </p>
 	<h3> Daily Log</h3>
-		<h4>Day 1</h4>
-		<p>The Internship started off with me making token packs with the Pack Creator software. It was a rather easy job, but it was tedious. I ended up burning through all of the back from the artist Devin Knight in a total of 5 hours. I then had to go back through and redo them all due to a new pack creator that allowed the packs to be uploaded strait to the site. This ended up taking another 4-5 hours</p><img src="Internship/Day 1.png" class="img"height="200px">
-		<h4>Day 2</h4><p>Today was mostly spent learning the different systems of the Master’s ToolKit. I made sure I understood what each system did, and where it was located.</p><img src="" class="img"><img src="Internship/Day 2.png" class="img"height="200px">
-		<h4>Day 3</h4><p>Today was spent getting started on the 1st map. I didnt get very far as i spent alot of time watching more tutorials and continuing to learn the tools. Hopefully I should be able to move faster in the future</p><img src="Internship/Day 3.JPG" class="img"height="200px">
-		<h4>Day 4</h4><p>Today i worked on getting in all the major details to the map like the grass, trees, and the stones surrounding the altar. Next time i should be able to finish this one by adding in minor details like more vines and grasses</p><img src="Internship/Day 4.JPG" class="img"height="200px">
-		<h4>Day 5</h4><p>Today i finished Druid circle adding in some minor detailing like vines and some more grass. I also got started on the Insane dwarf by getting the ground and the water put in.</p><img src="Internship/Day 5.JPG" class="img"height="200px">
-		<h4>Day 6</h4><p>Today i worked on adding in all the details to insane dwarf, things like trees, the log, and the tent. I also started work on Council remnants, this time trying to get down all the major terrain so that i would only have to add in objects next time.</p><img src="Internship/Day 6.JPG" class="img"height="200px">
-		<h4>Day 7</h4><p>Today was spent adding in the minor details to the Council Remnants map. This ended up taking about an hour, and while normally I would keep Going, I knew vault of thorns would be more difficult so I didn’t want to make a little progress today, then have to try and remember what to do next time</p><img src="Internship/Day 7.JPG" class="img"height="200px">
-		<h4>Day 8</h4><p>Today i started on the Vault of Thorns. This one was much more complex as i had to be very specific with measurements and also had to hand draw some of the more complex sections. I ended up only getting the sizing and basic outline done so far.</p><img src="Internship/Day 8.JPG" class="img"height="200px">
-		<h4>Day 9</h4><p>Today I was told to swap from Vault of thorns to Redlake fort. This map was much bigger than any of the others so i decided to start at one point and work my way from there. I ended up spending an hour and a half making, checking, resizing, and remaking the fortification. I definitely have my work cut out for me in the next few days trying to get thehuge map finished.
-</p><img src="Internship/Day 9.JPG" class="img"height="200px">
-		<h4>Day 10</h4><p>Today i continued working on redlake fort. I got a decent amount further, however the majority is still yet to be done. I added some extra details around the fortification and started on the next section after the gatehouse. Trying to get the broken, rocky texture just right was rather difficult, and ended up taking me a while.</p><img src="Internship/Day 10.JPG" class="img"height="200px"><h5 class="hide">pp</h5>
-	
-		<h3> Mentor Eval Log</h3>
-		<img src="images/MER.PNG"><br/><br/><br/>
+	<table>
+		<tr>
+			<td><h4>Day 1</h4></td>
+		</tr>
+		<tr>
+			<td><p>The Internship started off with me making token packs with the Pack Creator software. It was a rather easy job, but it was tedious. I ended up burning through all of the back from the artist Devin Knight in a total of 5 hours. I then had to go back through and redo them all due to a new pack creator that allowed the packs to be uploaded strait to the site. This ended up taking another 4-5 hours.</p></td>
+			<td><img src="Internship/Day 1.png" class="img"height="200px"></td>
+		</tr>
+		<!-- --------------------------------------------------------------------------------------- -->
+		<tr>
+			<td><h4> Day 2</h4></td>
+		</tr>
+		<tr>
+			<td><p>Today was mostly spent learning the different systems of the Master’s ToolKit. I made sure I understood what each system did, and where it was located.</p></td>
+			<td><img src="Internship/Day 2.png" class="img"height="200px"></td>
+		</tr>
+		<!-- --------------------------------------------------------------------------------------- -->
+		<tr>
+			<td><h4>Day 3</h4></td>
+		</tr>
+		<tr>
+			<td><p>Today was spent getting started on the 1st map. I didnt get very far as I spent alot of time watching more tutorials and continuing to learn the tools. Hopefully I should be able to move faster in the future.</p></td>
+			<td><img src="Internship/Day 3.JPG" class="img"height="200px"></td>
+		</tr>
+		<!-- --------------------------------------------------------------------------------------- -->
+		<tr>
+			<td><h4>Day 4</h4></td>
+		</tr>
+		<tr>
+			<td><p>Today I worked on getting in all the major details to the map like the grass, trees, and the stones surrounding the altar. Next time I should be able to finish this one by adding in minor details like more vines and grasses.</p></td>
+			<td><img src="Internship/Day 4.JPG" class="img"height="200px"></td>
+		</tr>
+		<!-- --------------------------------------------------------------------------------------- -->
+		<tr>
+			<td><h4>Day 5</h4></td>
+		</tr>
+		<tr>
+			<td><p>Today I finished Druid circle adding in some minor detailing like vines and some more grass. I also got started on the Insane dwarf by getting the ground and the water put in.</p></td>
+			<td><img src="Internship/Day 5.JPG" class="img"height="200px"></td>
+		</tr>
+		<!-- --------------------------------------------------------------------------------------- -->
+		<tr>
+			<td><h4>Day 6</h4></td>
+		</tr>
+		<tr>
+			<td><p>Today I worked on adding in all the details to insane dwarf, things like trees, the log, and the tent. I also started work on Council remnants, this time trying to get down all the major terrain so that I would only have to add in objects next time.</p></td>
+			<td><img src="Internship/Day 6.JPG" class="img"height="200px"></td>
+		</tr>
+		<!-- --------------------------------------------------------------------------------------- -->
+		<tr>
+			<td><h4>Day 7</h4></td>
+		</tr>
+		<tr>
+			<td><p>Today was spent adding in the minor details to the Council Remnants map. This ended up taking about an hour, and while normally I would keep Going, I knew vault of thorns would be more difficult so I didn’t want to make a little progress today, then have to try and remember what to do next time</p></td>
+			<td><img src="Internship/Day 7.JPG" class="img"height="200px"></td>
+		</tr>
+		<!-- --------------------------------------------------------------------------------------- -->
+		<tr>
+			<td><h4>Day 8</h4></td>
+		</tr>
+		<tr>
+			<td><p>Today I started on the Vault of Thorns. This one was much more complex as I had to be very specific with measurements and also had to hand draw some of the more complex sections. I ended up only getting the sizing and basic outline done so far.</p></td>
+			<td><img src="Internship/Day 8.JPG" class="img"height="200px"></td>
+		</tr>
+		<!-- --------------------------------------------------------------------------------------- -->
+		<tr>
+			<td><h4>Day 9</h4></td>
+		</tr>
+		<tr>
+			<td><p>Today I was told to swap from Vault of thorns to Redlake fort. This map was much bigger than any of the others so I decided to start at one point and work my way from there. I ended up spending an hour and a half making, checking, resizing, and remaking the fortification. I definitely have my work cut out for me in the next few days trying to get thehuge map finished.</p></td>
+			<td><img src="Internship/Day 9.JPG" class="img"height="200px"></td>
+		</tr>
+		<!-- --------------------------------------------------------------------------------------- -->
+		<tr>
+			<td><h4>Day 10</h4></td>
+		</tr>
+		<tr>
+			<td><p>Today I continued working on redlake fort. I got a decent amount further, however the majority is still yet to be done. I added some extra details around the fortification and started on the next section after the gatehouse. Trying to get the broken, rocky texture just right was rather difficult, and ended up taking me a while.</p></td>
+			<td><img src="Internship/Day 10.JPG" class="img"height="200px"></td>
+		</tr>
+		<tr>
+			<td><h3>Mentor Eval Log</h3></td>
+		<tr>
+		<tr>
+			<td><img src="images/MEL.PNG" height="300px"></td>
+		</tr>
+	</table>
 		<h5>bees knees</h5>
 	  </div>
 	
